# figstudio

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  hatch_build.py  pyproject.toml
.github/workflows/: ci.yml  publish-pypi.yml  publish-testpypi.yml
docs/: api-reference.md  developer-guide.md  prd.md  release-notes.md  roadmap.md  technical-design.md  user-guide.md
docs/en/: gallery.md  getting-started.md  index.md  save-export-reuse.md  scientific-workflows.md  styles-and-layouts.md  troubleshooting.md
docs/en/architecture/: technical-design.md
docs/en/contributing/: developer-guide.md
docs/en/product/: prd.md  release-notes.md  roadmap.md
docs/en/product/roadmap/: deferred.md  initiatives.md  strategy.md
docs/en/reference/: api.md
docs/zh/: gallery.md  getting-started.md  index.md  save-export-reuse.md  scientific-workflows.md  styles-and-layouts.md  troubleshooting.md
docs/zh/architecture/: technical-design.md
docs/zh/contributing/: developer-guide.md
docs/zh/product/: prd.md  release-notes.md  roadmap.md
docs/zh/product/roadmap/: deferred.md  initiatives.md  strategy.md
docs/zh/reference/: api.md
examples/: basic_script.py  general_stats_recipe.py  smoke_server.py
examples/gallery/: category_boxplot_response.figstudio.json  category_boxplot_response.py  category_violin_response.figstudio.json  category_violin_response.py  ecdf_response_distribution.figstudio.json  ecdf_response_distribution.py  faceted_dose_response.figstudio.json  faceted_dose_response.py  neuro_ephys_event_rate.figstudio.json  neuro_ephys_event_rate.py  secondary_axis_timecourse.figstudio.json  secondary_axis_timecourse.py  spanned_layout_signal_map.figstudio.json  spanned_layout_signal_map.py  stacked_bar_sample_composition.figstudio.json  stacked_bar_sample_composition.py
examples/smoke_project/.figstudio/: styles.json
frontend/: index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
frontend/e2e/: smoke.spec.ts
frontend/scripts/: check-bundle.mjs
frontend/src/: App.tsx  CodePanel.tsx  GeneratedCodeEditor.tsx  api.ts  store.ts  styles.css  types.ts
src/figstudio/: __init__.py  __main__.py  cli.py  codegen.py  inspector.py  layers.py  models.py  recipes.py  registry.py  render.py  selection.py  server.py  session.py  spec_io.py  style_profiles.py  sync.py  validation.py
tests/: test_cli.py  test_codegen.py  test_contract_types.py  test_gallery_examples.py  test_inspector.py  test_layer_catalog.py  test_recipe_catalog.py  test_registry.py  test_render.py  test_server.py  test_smoke_workflow.py  test_spec_io.py  test_style_profiles.py  test_sync.py
